Added ticket scanning, admin's view of EventApproveals
Every User on the Profile can tap on MyID button which displays users ID in QR code. That QR code can be used by Exhibitor to check if user bought tickets for event. Exhibitor gets clear and simple green or red screen for simple checking. For QR code scanning, MercariQRScanner pod was used. On EventApproveal, ApprovealStatus enum was added for easier checks.  On AdminDashboard, Oranize button was added which displays table of all EventApproveals. Only those approveals that are in awating feedback status can be changed. For others, details view is available.

--- a/Spancirfest/Spancirfest/Application/Info.plist
+++ b/Spancirfest/Spancirfest/Application/Info.plist
@@ -51,6 +51,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera is requred to use this application</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
